--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,8 @@
 		<module>main/plugins/org.talend.hadoop.distribution.emr240</module>
 		<module>main/plugins/org.talend.hadoop.distribution.emr240hive0131</module>
 		<module>main/plugins/org.talend.hadoop.distribution.emr400</module>
+		<module>main/plugins/org.talend.hadoop.distribution.emr450</module>
+		<module>main/plugins/org.talend.hadoop.distribution.emr450.jars</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdinsight310</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdinsight320</module>
 		<module>main/plugins/org.talend.hadoop.distribution.hdinsight340</module>
@@ -142,6 +144,7 @@
 		<module>test/plugins/org.talend.hadoop.distribution.emr240hive0131.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.emr400.test</module>
+		<module>test/plugins/org.talend.hadoop.distribution.emr450.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.hdinsight310.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.hdinsight320.test</module>
 		<module>test/plugins/org.talend.hadoop.distribution.hdp120.test</module>
