[TBD-3133] Add MapR Ticket API. Add Mapr Ticket on tHDFSConnection.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -69,3 +69,12 @@ CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
 CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
 CONFIGURATIONS.NAME = Configurations
+
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+HADOOP_LOGIN.NAME=
