[TBD-3013] Add Kafka 0.9.0.x new consumer implementation and prepare components UI to support SSL

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaCreateTopic/tKafkaCreateTopic_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaCreateTopic/tKafkaCreateTopic_messages.properties
@@ -7,6 +7,7 @@ CONNECTION.NAME=
 
 KAFKA_VERSION.NAME=Version
 KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
+KAFKA_VERSION.ITEM.KAFKA_0_9_0_1=Kafka 0.9.0.1
 
 ZOOKEEPER_CONNECT.NAME=Zookeeper quorum list
 
@@ -25,3 +26,5 @@ TOPICACTION.NAME=Action on topic
 TOPICACTION.ITEM.CREATE_TOPIC=Create topic
 TOPICACTION.ITEM.CREATE_IF_NOT_EXISTS=Create topic if not exists
 TOPICACTION.ITEM.ALTER_TOPIC=Alter topic
+
+ZOOKEEPER_SECURITY_IS_ENABLED.NAME=Zookeeper security is enabled
