--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
@@ -11,7 +11,9 @@ CONNECTION.NAME=
 
 KAFKA_VERSION.NAME=Version
 KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
+KAFKA_VERSION.ITEM.KAFKA_0_9_0_1=Kafka 0.9.0.1
 ZOOKEEPER_CONNECT.NAME=Zookeeper quorum list
+BROKER_LIST.NAME=Broker list
 
 KAFKA_TOPIC.NAME=Topic name
 GROUP_ID.NAME=Consumer group id
@@ -20,11 +22,20 @@ CUSTOM_ENCODING.NAME=Custom encoding
 ENCODING.NAME=Encoding
 
 OFFSET_MANAGEMENT_GROUP.NAME=Offset management
+SECURITY_GROUP.NAME=Security
+
+USE_HTTPS.NAME=Use SSL/TLS
+HTTPS_SETTING.NAME=tSetKeystore
 
 RESET_OFFSET.NAME=Reset offsets on consumer group
 AUTO_OFFSET_RESET.NAME=New consumer group starts from
 AUTO_OFFSET_RESET.ITEM.LARGEST=latest
 AUTO_OFFSET_RESET.ITEM.SMALLEST=beginning
+AUTO_OFFSET_RESET_NEW.NAME=New consumer group starts from
+AUTO_OFFSET_RESET_NEW.ITEM.LATEST=latest
+AUTO_OFFSET_RESET_NEW.ITEM.EARLIEST=beginning
+AUTO_OFFSET_RESET_NEW.ITEM.NONE=previous
+
 AUTO_COMMIT_OFFSET.NAME=Auto-commit offsets
 KAFKA_COMMIT_INTERVAL.NAME=Interval (ms)
 KAFKA_OFFSET_STORAGE.NAME=Offset storage
