--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages.properties
@@ -3,5 +3,12 @@ LONG_NAME=Specify a connection to Kakfa
 
 KAFKA_VERSION.NAME=Version
 KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
+KAFKA_VERSION.ITEM.KAFKA_0_9_0_1=Kafka 0.9.0.1
 ZOOKEEPER_CONNECT.NAME=Zookeeper quorum list
 BROKER_LIST.NAME=Broker list
+
+CONNECTION_GROUP.NAME=Connection
+SECURITY_GROUP.NAME=Security
+
+USE_HTTPS.NAME=Use SSL/TLS
+HTTPS_SETTING.NAME=tSetKeystore
