--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages.properties
@@ -8,6 +8,11 @@ SCHEMA.NAME=Schema
 
 KAFKA_VERSION.NAME=Version
 KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
+KAFKA_VERSION.ITEM.KAFKA_0_9_0_1=Kafka 0.9.0.1
+
+SECURITY_GROUP.NAME=Security
+USE_HTTPS.NAME=Use SSL/TLS
+HTTPS_SETTING.NAME=tSetKeystore
 
 BROKER_LIST.NAME=Broker list
 KAFKA_PRODUCER_PROPERTIES.NAME=Kafka properties
