[TBD-3133] Add MapR Ticket on HDFS components.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
@@ -79,3 +79,12 @@ PRINT.NAME=Print to console
 CONN.NAME=Connection
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+HADOOP_LOGIN.NAME=
