--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSDelete/tHDFSDelete_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSDelete/tHDFSDelete_messages.properties
@@ -72,4 +72,15 @@ CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
-DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
+DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0$
+
+
+
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+HADOOP_LOGIN.NAME=
