[TBD-3133] Add MapR Ticket on Hive components.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -191,3 +191,13 @@ TEZ_LIB_FOLDER.NAME=Install folder in HDFS
 TEZ_LIB_NAME.NAME=Lib jars
 TEZ_LIB_NAME.ITEM.JAR_NAME=Jar name
 TEZ_LIB_PATH.NAME=Lib path(folder or file)
+
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+MAPRTICKET_USERNAME.NAME=Username
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+HADOOP_LOGIN.NAME=
