--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -218,3 +218,13 @@ REMOTE_FOLDER.NAME=Deployment Blob
 HDINSIGHT_CONF.NAME=HD Insight configuration
 HDINSIGHT_USERNAME.NAME=Username
 HDINSIGHT_PASSWORD.NAME=Password
+
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+MAPRTICKET_USERNAME.NAME=Username
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+HADOOP_LOGIN.NAME=
