--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -214,3 +214,14 @@ TEZ_LIB_PATH.NAME=Lib path(folder or file)
 GROUP.NAME=Group
 
 CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
+
+
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+MAPRTICKET_USERNAME.NAME=Username
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+HADOOP_LOGIN.NAME=
