--- a/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
@@ -160,78 +160,12 @@
             name="avro-compiler-1.7.7.jar"
             mvn_uri="mvn:org.talend.libraries/avro-compiler-1.7.7/6.0.0">
         </libraryNeeded>   
-        <!--libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="hadoop-aws-hdinsight340"
-            name="hadoop-aws-2.7.0.jar"
-            mvn_uri="mvn:org.talend.libraries/hadoop-aws-2.7.0/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="aws-java-sdk-1.7.4.jar"
-            name="aws-java-sdk-1.7.4.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-1.7.4/6.0.0">
-        </libraryNeeded-->        
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="spark-streaming-kinesis-asl-assembly-hdinsight340"
-            name="spark-streaming-kinesis-asl-assembly_2.10-1.5.0.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl-assembly_2.10-1.5.0/6.0.0">
-        </libraryNeeded>        
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="amazon-kinesis-client-1.2.1.jar"
-            name="amazon-kinesis-client-1.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/amazon-kinesis-client-1.2.1/6.0.0">
-        </libraryNeeded>        
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="aws-java-sdk-kinesis-1.9.16.jar"
-            name="aws-java-sdk-kinesis-1.9.16.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-kinesis-1.9.16/6.0.0">
-        </libraryNeeded>        
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="aws-java-sdk-dynamodb-1.9.16.jar"
-            name="aws-java-sdk-dynamodb-1.9.16.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-dynamodb-1.9.16/6.0.0">
-        </libraryNeeded>        
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="aws-java-sdk-cloudwatch-1.9.16.jar"
-            name="aws-java-sdk-cloudwatch-1.9.16.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-cloudwatch-1.9.16/6.0.0">
-        </libraryNeeded>        
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="aws-java-sdk-core-1.9.16.jar"
-            name="aws-java-sdk-core-1.9.16.jar"
-            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-core-1.9.16/6.0.0">
-        </libraryNeeded>        
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="spark-streaming-kafka-hdinsight340"
-            name="spark-streaming-kafka_2.10-1.5.0-hdinsight340.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-streaming-kafka_2.10-1.5.0-hdinsight340/6.0.0">
-        </libraryNeeded>
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.hdinsight340"
-            id="kafka_2.10-0.8.2.1.jar"
-            name="kafka_2.10-0.8.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/kafka_2.10-0.8.2.1/6.0.0">
-        </libraryNeeded>        
         <libraryNeeded
             context="plugin:org.talend.libraries.esb"
             id="joda-time-2.7.jar"
             name="joda-time-2.7.jar"
             mvn_uri="mvn:org.talend.libraries/joda-time-2.7/6.0.0">
         </libraryNeeded>        
-        <libraryNeeded
-            context="plugin:org.talend.libraries.apache.kafka"
-            id="kafka-clients-0.8.2.1.jar"
-            name="kafka-clients-0.8.2.1.jar"
-            mvn_uri="mvn:org.talend.libraries/kafka-clients-0.8.2.1/6.0.0">
-        </libraryNeeded>             
         
         <!-- Groups -->
         
@@ -387,13 +321,6 @@
              <library id="avro-compiler-hdinsight340" />
         </libraryNeededGroup>    
         
-        <!-- Spark group MRREQUIRED -->
-        <!--<libraryNeededGroup
-                description="Spark libraries for HDInsight 3.4.0 that are MRREQUIRED"
-                id="SPARK-LIB-MRREQUIRED-HD_INSIGHT_3_4_0"
-                name="SPARK-LIB-MRREQUIRED-HD_INSIGHT_3_4_0">
-        </libraryNeededGroup>-->
-        
         <!-- Spark Parquet group MRREQUIRED -->
         <libraryNeededGroup
                 description="Spark libraries for HDInsight 3.4.0 that are MRREQUIRED"
@@ -420,52 +347,9 @@
                 description="Spark Hive libraries for HDInsight 3.4.0 that are MRREQUIRED"
                 id="SPARK-HIVE-LIB-MRREQUIRED-HD_INSIGHT_3_4_0"
                 name="SPARK-HIVE-LIB-MRREQUIRED-HD_INSIGHT_3_4_0">
-            <library id="hive-exec-hdinsight340"/>
-            <library id="hive-metastore-hdinsight340"/>
-            <library id="libfb303-0.9.2.jar"/>            
+            <library id="datanucleus-api-jdo-3.2.6.jar"/>
+            <library id="datanucleus-core-3.2.10.jar"/>
+            <library id="datanucleus-rdbms-3.2.9.jar"/>
         </libraryNeededGroup>
-        
-        <!-- Spark Kinesis group MRREQUIRED -->
-        <libraryNeededGroup
-                description="Spark Kinesis libraries for HDInsight 3.4.0 that are MRREQUIRED"
-                id="SPARK-KINESIS-LIB-MRREQUIRED-HD_INSIGHT_3_4_0"
-                name="SPARK-KINESIS-LIB-MRREQUIRED-HD_INSIGHT_3_4_0">
-            <library id="spark-streaming-kinesis-asl-assembly-hdinsight340"/>
-            <library id="amazon-kinesis-client-1.2.1.jar"/>
-            <library id="aws-java-sdk-kinesis-1.9.16.jar"/>
-            <library id="aws-java-sdk-core-1.9.16.jar"/>            
-            <library id="aws-java-sdk-dynamodb-1.9.16.jar"/>            
-            <library id="aws-java-sdk-cloudwatch-1.9.16.jar"/>            
-            <library id="joda-time-2.7.jar"/>            
-        </libraryNeededGroup>
-        
-        <!-- Spark Kafka group MRREQUIRED -->
-        <libraryNeededGroup
-                description="Spark Kafka assembly libraries for HDInsight 3.4.0 that are MRREQUIRED"
-                id="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-HD_INSIGHT_3_4_0"
-                name="SPARK-KAFKA-ASSEMBLY-LIB-MRREQUIRED-HD_INSIGHT_3_4_0">
-            <library id="spark-streaming-kafka-hdinsight340"/>
-            <library id="kafka_2.10-0.8.2.1.jar"/>
-            <library id="metrics-core-2.2.0.jar"/>
-        </libraryNeededGroup>
-        
-        <!-- Spark Kafka Client group MRREQUIRED -->
-        <libraryNeededGroup
-                description="Spark Kafka client libraries for HDInsight 3.4.0 that are MRREQUIRED"
-                id="SPARK-KAFKA-CLIENT-LIB-MRREQUIRED-HD_INSIGHT_3_4_0"
-                name="SPARK-KAFKA-CLIENT-LIB-MRREQUIRED-HD_INSIGHT_3_4_0">
-            <library id="kafka-clients-0.8.2.1.jar"/>
-        </libraryNeededGroup>
-        
-        <!-- Spark Kafka Avro group MRREQUIRED -->
-        <libraryNeededGroup
-                description="Spark Kafka Avro libraries for HDInsight 3.4.0 that are MRREQUIRED"
-                id="SPARK-KAFKA-AVRO-LIB-MRREQUIRED-HD_INSIGHT_3_4_0"
-                name="SPARK-KAFKA-AVRO-LIB-MRREQUIRED-HD_INSIGHT_3_4_0">
-            <library id="avro-hdinsight340"/>
-            <library id="jackson-mapper-asl-1.8.8.jar" />
-            <library id="jackson-core-asl-1.8.8.jar" />
-        </libraryNeededGroup>            
-        
     </extension>
 </plugin>
