--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages.properties
@@ -1,5 +1,5 @@
 HELP=org.talend.help.tKafkaConnection
-LONG_NAME=Specify a connection to Kakfa
+LONG_NAME=Specify a connection to Kafka
 
 KAFKA_VERSION.NAME=Version
 KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
@@ -12,3 +12,11 @@ SECURITY_GROUP.NAME=Security
 
 USE_HTTPS.NAME=Use SSL/TLS
 HTTPS_SETTING.NAME=tSetKeystore
+
+USE_KRB.NAME=Use kerberos authentication
+JAAS_CONF.NAME=JAAS configuration path
+KRB_SERVICE_NAME.NAME=Kafka brokers principal name
+SET_KINIT_PATH.NAME=Set kinit command path
+KINIT_PATH.NAME=
+SET_KRB5_CONF.NAME=Set kerberos configuration path
+KRB5_CONF.NAME=
