--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
@@ -27,6 +27,14 @@ SECURITY_GROUP.NAME=Security
 USE_HTTPS.NAME=Use SSL/TLS
 HTTPS_SETTING.NAME=tSetKeystore
 
+USE_KRB.NAME=Use kerberos authentication
+JAAS_CONF.NAME=JAAS configuration path
+KRB_SERVICE_NAME.NAME=Kafka brokers principal name
+SET_KINIT_PATH.NAME=Set kinit command path
+KINIT_PATH.NAME=
+SET_KRB5_CONF.NAME=Set kerberos configuration path
+KRB5_CONF.NAME=
+
 RESET_OFFSET.NAME=Reset offsets on consumer group
 AUTO_OFFSET_RESET.NAME=New consumer group starts from
 AUTO_OFFSET_RESET.ITEM.LARGEST=latest
