Define the exhaustive list of jars in the copy goal of the CDH550 jars plugin.

--- a/main/plugins/org.talend.hadoop.distribution.cdh550.jars/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550.jars/pom.xml
@@ -9,6 +9,11 @@
   </parent>
   <artifactId>org.talend.hadoop.distribution.cdh550.jars</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <properties>
+    <talend.groupid>org.talend.libraries</talend.groupid>
+    <talend.version.610>6.1.0</talend.version.610>
+    <talend.version.600>6.0.0</talend.version.600>
+  </properties>
   <build>
     <plugins>
       <plugin>
@@ -27,9 +32,249 @@
               <outputDirectory>${project.basedir}/lib</outputDirectory>
               <artifactItems>
                 <artifactItem>
-                  <groupId>org.talend.libraries</groupId>
-                  <artifactId>avro-mapred-1.7.7</artifactId>
-                  <version>6.0.0</version>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-common-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-hdfs-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-auth-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-aws-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-yarn-api-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-yarn-common-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-yarn-client-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-yarn-server-web-proxy-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-mapreduce-client-common-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>                
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-mapreduce-client-core-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>                
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hadoop-mapreduce-client-jobclient-2.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>parquet-hadoop-bundle-1.5.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hbase-common-1.0.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hbase-client-1.0.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hbase-protocol-1.0.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hbase-server-1.0.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hbase-hadoop-compat-1.0.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-common-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-exec-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-serde-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-metastore-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-service-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-jdbc-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-hcatalog-core-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-hcatalog-pig-adapter-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-hcatalog-server-extensions-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>hive-hbase-handler-1.1.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>parquet-pig-bundle-1.5.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>pig-0.12.0-cdh5.5.2-withouthadoop</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>parquet-avro-1.5.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>avro-mapred-1.7.6-cdh5.5.2-hadoop2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>avro-1.7.6-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>sqoop-1.4.6-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>zookeeper-3.4.5-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>aws-java-sdk-1.7.4</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>htrace-core-3.2.0-incubating</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>htrace-core4-4.0.1-incubating</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>jackson-annotations-2.2.3</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>jackson-core-2.2.3</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>jackson-databind-2.2.3</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>jackson-jaxrs-1.8.8</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>jackson-xc-1.8.8</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>jersey-server-1.14</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>jersey-servlet-1.14</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>jline-2.11</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>joda-time-2.7</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>kafka_2.10-0.8.2.1</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>kafka-clients-0.8.2.1</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>spark-streaming-kafka_2.10-1.5.0-cdh5.5.0</artifactId>
+                  <version>${talend.version.600}</version>
                 </artifactItem>
               </artifactItems>
             </configuration>
