--- a/main/plugins/org.talend.hadoop.distribution.cdh550.jars/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550.jars/pom.xml
@@ -193,6 +193,11 @@
                 </artifactItem>
                 <artifactItem>
                   <groupId>${talend.groupid}</groupId>
+                  <artifactId>avro-ipc-1.7.6-cdh5.5.2</artifactId>
+                  <version>${talend.version.610}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
                   <artifactId>sqoop-1.4.6-cdh5.5.2</artifactId>
                   <version>${talend.version.610}</version>
                 </artifactItem>
@@ -273,7 +278,27 @@
                 </artifactItem>
                 <artifactItem>
                   <groupId>${talend.groupid}</groupId>
-                  <artifactId>spark-streaming-kafka_2.10-1.5.0-cdh5.5.0</artifactId>
+                  <artifactId>spark-streaming-kafka_2.10-1.5.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>spark-streaming-flume_2.10-1.5.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>spark-streaming-flume-sink_2.10-1.5.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>flume-ng-core-1.6.0-cdh5.5.2</artifactId>
+                  <version>${talend.version.600}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>${talend.groupid}</groupId>
+                  <artifactId>flume-ng-sdk-1.6.0-cdh5.5.2</artifactId>
                   <version>${talend.version.600}</version>
                 </artifactItem>
               </artifactItems>
