TBD-3013 Move org.talend.libraries.apache.kafka to tbd-studio-se feature.

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 		<module>main/plugins/org.talend.designer.hdfsbrowse</module>
 		<module>main/plugins/org.talend.designer.neo4j</module>
 		<module>main/plugins/org.talend.designer.pigmap</module>
+		<module>main/plugins/org.talend.libraries.apache.kafka</module>
 		<module>main/plugins/org.talend.libraries.couchbase</module>
 		<module>main/plugins/org.talend.libraries.couchdb</module>
 		<module>main/plugins/org.talend.libraries.hadoop</module>
