TDI-35904: Add create table action for tDynamoDBOutput https://jira.talendforge.org/browse/TDI-35904

--- a/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBOutput/tDynamoDBOutput_messages.properties
@@ -16,6 +16,13 @@ DATA_ACTION.ITEM.UPDATE=Update
 DATA_ACTION.ITEM.UPSERT=Upsert
 DATA_ACTION.NAME=Action on data
 
+TABLE_ACTION.ITEM.NONE=Default
+TABLE_ACTION.ITEM.DROP_CREATE=Drop and create table
+TABLE_ACTION.ITEM.CREATE=Create table
+TABLE_ACTION.ITEM.CREATE_IF_NOT_EXISTS=Create table if does not exist
+TABLE_ACTION.ITEM.DROP_IF_EXISTS_AND_CREATE=Drop table if exist and create
+TABLE_ACTION.NAME=Action on table
+
 DIE_ON_ERROR.NAME=Die on error
 
 REGION.NAME=Region
