--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -69,3 +69,14 @@ HBASE_REGIONSERVER_PRINCIPAL.NAME=Hbase Region Server principal
 
 CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
 CONFIGURATIONS.NAME = Configurations
+
+
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USERNAME.NAME=Username
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration (in s)
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+HADOOP_LOGIN.NAME=
