--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -109,3 +109,13 @@ HBASE_REGIONSERVER_PRINCIPAL.NAME=Hbase Region Server principal
 
 SET_TABLE_NS_MAPPING.NAME=Set table Namespace mappings
 TABLE_NS_MAPPING.NAME=
+
+USE_MAPRTICKET.NAME=Use MapR Ticket authentication
+USERNAME.NAME=Username
+MAPRTICKET_PASSWORD.NAME=Password
+MAPRTICKET_CLUSTER.NAME=Cluster name
+MAPRTICKET_DURATION.NAME=Ticket duration (in s)
+SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
+MAPR_HOME_DIR.NAME=
+SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
+HADOOP_LOGIN.NAME=
